# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  02 May 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: typo fix for
  S_ISFIFO call; thanks woodchip!

*portage-1.9.6 (02 May 2002)

  02 May 2002; Daniel Robbins <drobbins@gentoo.org> make.conf: SYNC variable
  correctly set to use our DNS round-robin system (rsync.gentoo.org).

*portage-1.9.6_pre2 (01 May 2002)

  01 May 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: config file
  protection upgrade; we now record md5sums of previously-merged config protect
  files in /var/cache/edb/config; we use this information to avoid merging
  files that have been merged by us before (if it is safe to do so).  This 
  doesn't solve the problem of rolling back to a previously-merged version of
  a config file; we need to add cvs headers to every config file to get that
  to work.
  
*portage-1.9.6_pre1 (01 May 2002)

  01 May 2002; Daniel Robbins <drobbins@gentoo.org> emerge: added "inject"
  capability to artificially satisfy a dep -- for situations when you don't
  want Portage to do it for you because you've taken care of it already.
  
  01 May 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: totally
  rewrote emerge's unmerge code.  The original code (added by Bevin) was a bit
  too cryptic and "big" for my taste.  Also added two new capabilities to
  portage.py's vartree: .getslot() and .gettimeval().  getslot() returns the
  slot value of a cat/pkg-v, if any, and gettimeval() returns a "time value"
  (based on mtime/COUNTER value) that can be used to determine the order in
  which packages got merged.  The purpose of these improvements were to revamp
  the existing Portage code that could only unmerge a db entry if there was a
  corresponding ebuild file.  This conflicted with the ability to "inject"
  packages (see above), so it needed to be changed.  Also fixed some bugs along
  the way.
  